<resources>
    <string name="app_name">Happy Birthday</string>
    <string name="happy_birthday">Happy Birthday!!</string>
    <string name="by_deevesh">By Deevesh!!</string>
    <string name="todo">TODO</string>
    <string name="deevesh_kannan_n">Ram</string>
    <string name="Quotes">Each new year of life added to your past, changing the way you viewed every new day, influencing how you reacted to everything from the simplest daily routines to complex events touching you, your family, and the world you lived in</string>
</resources>